# strands-costguard

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py  live_agent_example.py  strands_integration.py
examples/policies/: budgets.yaml  pricing.yaml  routing.yaml
src/strand_cost_guard/: __init__.py
src/strand_cost_guard/core/: __init__.py  budget_tracker.py  config.py  cost_guard.py  decisions.py  entities.py  usage.py
src/strand_cost_guard/metrics/: __init__.py  otel.py
src/strand_cost_guard/policies/: __init__.py  budget.py  routing.py  store.py
src/strand_cost_guard/pricing/: __init__.py  table.py
src/strand_cost_guard/routing/: __init__.py  router.py
src/strands_costguard/: __init__.py
src/strands_costguard/core/: __init__.py  budget_tracker.py  config.py  cost_guard.py  decisions.py  entities.py  usage.py
src/strands_costguard/metrics/: otel.py
src/strands_costguard/persistence/: valkey_store.py
src/strands_costguard/policies/: __init__.py  budget.py  routing.py  store.py
src/strands_costguard/pricing/: __init__.py  table.py
src/strands_costguard/routing/: router.py
tests/: __init__.py  test_budget.py  test_cost_guard.py  test_otel.py  test_pricing.py  test_router.py  test_routing.py  test_store.py  test_valkey_store.py
tests/integration/: test_anthropic.py  test_openai.py
