[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strand-cost-guard"
version = "0.1.0"
description = "Cost Guard component for Strands-based multi-agent systems with budget enforcement, adaptive routing, and OpenTelemetry metrics"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Strands Team" }
]
keywords = [
    "strands",
    "cost-management",
    "budget-enforcement",
    "opentelemetry",
    "llm",
    "agents",
    "multi-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "strands-agents[otel]>=0.1.0",  # Provides StrandsTelemetry and OTEL infrastructure
    "opentelemetry-api>=1.20.0",  # For metrics.get_meter()
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/strands/strand-cost-guard"
Documentation = "https://github.com/strands/strand-cost-guard#readme"
Repository = "https://github.com/strands/strand-cost-guard"

[tool.hatch.build.targets.wheel]
packages = ["src/strand_cost_guard"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
